--- a/app/globals.css
+++ b/app/globals.css
@@ -3,8 +3,11 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #fbfffe;
+  --black: #001514;
+  --red: #6b0504;
+  --orange: #a3320b;
+  --yellow: #e6af2e;
 }
 
 body {
@@ -14,5 +17,36 @@ body {
 }
 
 h1 {
-  font-size: 6rem;
+  font-size: 4rem;
+  padding: 2rem;
+  color: var(--background);
+  background: none; /* Transparent background */
+  text-shadow: 
+    4px 4px 8px var(--red),
+    -4px -4px 8px var(--red); 
+}
+
+.hero-container {
+  display: flex;
+  position: relative; /* Allows absolute positioning within this container */
+  justify-content: center;
+  align-items: center;
+  height: 75vh;
+  background-image: url('../public/img/hero-croped.jpg');
+  background-size: cover;
+}
+
+.login {
+  position: absolute; 
+  color: var(--background);
+  top: 1rem; 
+  right: 1rem; 
+  background: rgba(0, 0, 0, 0.6);
+  padding: 0.5rem 1rem; 
+  border-radius: 5px; 
+  font-size: 1rem; 
+}
+
+.login:hover {
+  text-decoration: underline;
 }
