--- a/app/globals.css
+++ b/app/globals.css
@@ -60,6 +60,7 @@ h3 {
   font-size: 1.5rem;
   padding: 2rem;
   text-align: center;
+  box-shadow: inset 0px 0px 20px black;
 }
 
 .pills, .inventory {
