--- a/app/globals.css
+++ b/app/globals.css
@@ -38,6 +38,7 @@ h3 {
   height: 75vh;
   background-image: url('../public/img/hero-croped.jpg');
   background-size: cover;
+  box-shadow: inset 0px 0px 30px black;
 }
 
 .login {
@@ -71,7 +72,7 @@ h3 {
 }
 
 .currentGames-Container, .request-Container {
-  background-color: var(--yellow);
+  background-color: lightgray;
   padding: 1rem;
   border-radius: 5px;
   width: 50%;
@@ -79,12 +80,13 @@ h3 {
 }
 
 .gameCard h4{
+  color: var(--red);
   font-size: 1rem;
   font-weight: bold;
 }
 .gameCard{
   background-color: var(--background);
-  border: #001514 solid 1px;
+  border: var(--yellow) solid 2px;
   border-radius: 5px;
   padding: 1rem;
   margin: 1rem 0;
