--- a/app/globals.css
+++ b/app/globals.css
@@ -77,11 +77,17 @@ h3 {
   padding: 2rem;
 }
 
-.currentGames-Container, .request-Container, .inventory-container, .add-to-inventory{
+.currentGames-Container, .inventory-container, .add-to-inventory{
   background-color: lightgray;
   padding: 1rem;
   border-radius: 5px;
   box-shadow: gray 2px 2px 5px;
+}
+
+.currentGames-header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .gameCard h4{
