--- a/app/globals.css
+++ b/app/globals.css
@@ -88,6 +88,7 @@ h3 {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 0 1rem 0;
 }
 
 .gameCard h4{
@@ -197,7 +198,7 @@ h3 {
   font-size: 1rem;
   float: right;
 }
-.game-modal {
+.game-modal, .inventory-modal {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -212,17 +213,16 @@ h3 {
 
 }
 
-.game-modal .modal-content h2{
+.game-modal .modal-content h2, .inventory-modal .modal-content h2 {
   color: var(--red);
   font-size: 2rem;
   text-align: center;
-  
 }
 
 
 
 
-.game-modal .modal-content form {
+.game-modal .modal-content form, .inventory-modal .modal-content {
   font-size: 1.25rem;
   display: flex;
   flex-direction: column;
@@ -232,7 +232,7 @@ h3 {
   border-radius: 5px;
 }
 
-.game-modal .modal-content form label {
+.game-modal .modal-content form label, .inventory-modal .modal-content label {
   display: flex;
   justify-content: space-between;
 }
@@ -242,15 +242,20 @@ h3 {
   padding: 0.25rem;
 }
 
+.inventory-modal .modal-content label input{
+  width: 50%;
+  border-radius: 5px;
+  padding: 0.25rem;
+}
 
 
-.game-modal .modal-actions {
+.game-modal .modal-actions, .inventory-modal .modal-actions {
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
 }
 
-.game-modal .modal-actions button {
+.game-modal .modal-actions button, .inventory-modal .modal-actions button {
   padding: 0.5rem;
   border-radius: 5px;
   background-color: var(--red);
