--- a/app/globals.css
+++ b/app/globals.css
@@ -69,7 +69,7 @@ h3 {
 
 }
 
-.pills, .inventory {
+.pills, .inventory , .gameRequestAdmin, .inventoryRequestAdmin{
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -77,7 +77,7 @@ h3 {
   padding: 2rem;
 }
 
-.currentGames-Container, .inventory-container, .add-to-inventory{
+.currentGames-Container, .inventory-container, .add-to-inventory, .gameRequestAdmin-container, .inventoryRequestAdmin-container{
   background-color: lightgray;
   padding: 1rem;
   border-radius: 5px;
@@ -97,7 +97,7 @@ h3 {
   font-weight: bold;
 }
 
-.gameCard{
+.gameCard, .gameRequestCard{
   background-color: var(--background);
   border: var(--yellow) solid 2px;
   border-radius: 5px;
