--- a/app/globals.css
+++ b/app/globals.css
@@ -295,10 +295,32 @@ h3 {
   flex-direction: column;
   gap: 1rem;
   padding: 2rem;
-  color: black;
+  color: var(--background);
   border-radius: 5px;
+  max-width: 300px;
 }
+.login:hover {
+  text-decoration: none;
+}
+
 
 .login-form input{
   color: black;
+}
+
+.close-modal{
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  padding: 0.5rem;
+  background-color: var(--red);
+  color: var(--background);
+  border-radius: 5px;
+}
+
+.login-form button{
+  background-color: var(--red);
+  color: var(--background);
+  padding: 0.5rem;
+  border-radius: 5px;
 }
