--- a/app/globals.css
+++ b/app/globals.css
@@ -198,7 +198,7 @@ h3 {
   font-size: 1rem;
   float: right;
 }
-.game-modal, .inventory-modal {
+.game-modal, .inventory-modal, .game-add-modal {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -213,7 +213,7 @@ h3 {
 
 }
 
-.game-modal .modal-content h2, .inventory-modal .modal-content h2 {
+.game-modal .modal-content h2, .inventory-modal .modal-content h2, .game-add-modal .modal-content h2 {
   color: var(--red);
   font-size: 2rem;
   text-align: center;
@@ -222,7 +222,7 @@ h3 {
 
 
 
-.game-modal .modal-content form, .inventory-modal .modal-content {
+.game-modal .modal-content form, .inventory-modal .modal-content, .game-add-modal .modal-content {
   font-size: 1.25rem;
   display: flex;
   flex-direction: column;
@@ -232,7 +232,7 @@ h3 {
   border-radius: 5px;
 }
 
-.game-modal .modal-content form label, .inventory-modal .modal-content label {
+.game-modal .modal-content form label, .inventory-modal .modal-content label, .game-add-modal .modal-content label {
   display: flex;
   justify-content: space-between;
 }
@@ -242,20 +242,20 @@ h3 {
   padding: 0.25rem;
 }
 
-.inventory-modal .modal-content label input{
+.inventory-modal .modal-content label input, .game-add-modal .modal-content label input {
   width: 50%;
   border-radius: 5px;
   padding: 0.25rem;
 }
 
 
-.game-modal .modal-actions, .inventory-modal .modal-actions {
+.game-modal .modal-actions, .inventory-modal .modal-actions, .game-add-modal .modal-actions {
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
 }
 
-.game-modal .modal-actions button, .inventory-modal .modal-actions button {
+.game-modal .modal-actions button, .inventory-modal .modal-actions button, .game-add-modal .modal-actions button {
   padding: 0.5rem;
   border-radius: 5px;
   background-color: var(--red);
